# openfootball

./: .gitignore  Cargo.toml  LICENSE  README.md
application/: Cargo.toml
core/: Cargo.toml
core/src/: errors.rs  lib.rs
core/src/domain/: mod.rs
core/src/domain/entities/: club.rs  fixture.rs  game.rs  match_stats.rs  mod.rs  player.rs  player_attributes.rs  season.rs  stadium.rs
core/src/domain/enums/: fixture_status.rs  match_event_type.rs  mod.rs  position.rs  season_status.rs
core/src/domain/repositories/: game_repository.rs
core/src/domain/tests/: mod.rs  player_tests.rs
core/src/domain/value_objects/: club_finance.rs  match_event.rs  mod.rs  player_attributes.rs  position_weights.rs  save_metadata.rs
core/src/domain/weights/: am_weights.rs  cb_weights.rs  cm_weights.rs  dm_weights.rs  fb_weights.rs  gk_weights.rs  mod.rs  sm_weights.rs  ss_weights.rs  st_weights.rs  sw_weights.rs
persistence/: Cargo.toml
simulation/: Cargo.toml
tauri/: index.html  pnpm-lock.yaml
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
