[package]
name = "tauri"
edition = "2024"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
simulation = { path="../../simulation" }
openfootball_core = { path="../../core" }
persistence = { path="../../persistence" }
application = { path="../../application" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
